Bug fix with responsiveness and spacing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -40,19 +40,28 @@
     flex-direction: column;
 }
 
-.about-image {
-    width: 300px;
-    height: 300px;
+.about-image-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 310px;
+    height: 310px;
     border-radius: 50%;
     border: 8px solid #124E66;
-    object-fit: cover;
+    overflow: hidden;
     margin-bottom: 1rem;
+}
+
+.about-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 .about-text {
     font-size: 1.3rem;
     flex: 2;
-    margin-bottom: 0rem;
     color: #D3D9D4;
 }
 
@@ -78,15 +87,14 @@
 @media (min-width: 768px) {
     .about-content {
         flex-direction: row;
-        text-align: left;
+        text-align: center;
     }
-    .about-image {
-        display: block;
+    .about-image-wrapper {
         margin-right: 5rem;
     }
     .about-text {
         margin-top: 0;
-        text-align: justify;
+        text-align: center;
         word-spacing: 3px;
         line-height: 2.3rem;
     }
@@ -96,12 +104,12 @@
 }
 
 @media (max-width: 767px) {
-    .about-image {
+    .about-image-wrapper {
         display: none;
     }
     .about-text {
         margin-top: 0;
-        text-align: justify;
+        text-align: center;
         word-spacing: 2px;
         line-height: 2.2rem;
     }
