--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -98,7 +98,7 @@
 
 .contact-info p {
     margin: 0.5rem 0;
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: #D3D9D4;
 }
 
